# Graphion

./: .clang-tidy  .cspell.json  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MAINTAINERS.md  OWNERSHIP.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_CONTACTS.md  SUPPORT.md  docker-compose.yml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  labeler.yml  labels.yml  monthly-audit-template.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: performance.yml  rfc.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: actionlint.yml  actions-pinning-audit.yml  ci.yml  codeql.yml  contributors-sync.yml  coverage.yml  fuzz-nightly.yml  fuzz.yml  labels-sync.yml  license-headers.yml  links-check.yml  monthly-audit.yml  pgo.yml  pr-title.yml  pr-triage.yml  release-dry-run.yml  release.yml  repo-health.yml  sbom.yml  secrets.yml  spellcheck.yml  stale.yml
benchmarks/: bench_bfs.c  bench_hypergraph.c  bench_hypergraph_hyperedge_node_sum.c  bench_hypergraph_incident_sum.c  bench_vm.c  bench_vm_graph.c
benchmarks/baselines/: vm_dispatch.json
docs/: ACTIONS_SECURITY.md  ARCHITECTURE.md  ASM_FALLBACK_POLICY.md  ASM_FALLBACK_REPORT.md  ASM_REGISTERS.md  ASSEMBLY_SAFETY.md  BENCHMARKS.md  BRANCH_PROTECTION.md  CROSS_COMPILER_POLICY.md  CROSS_COMPILER_REPORT.md  GIT_SIGNING.md  GIT_WORKFLOW.md  IR.md  ISA.md  OPTIMIZATION_REPORTS.md  PERFORMANCE_RESULTS.md  PGO.md  PGO_CORPUS_POLICY.md  RELEASE.md  RELEASE_CHECKLIST.md  SUPPORT_POLICY.md
docs/incidents/: POSTMORTEM_TEMPLATE.md
fuzz/: fuzz_parser.c  fuzz_vm.c
graphion_rust/: Cargo.toml
graphion_rust/src/: main.rs
scripts/: README.md  bootstrap.ps1  bootstrap.sh  check_asm_safety.py  check_license_headers.py  check_repo_health.py  compare_bench.py  dev_build.ps1  dev_build.sh  quality_gate.ps1  quality_gate.sh  setup_hooks.ps1  setup_hooks.sh  update_contributors.py
scripts/bench/: bench_compare_with_rust.py  check_pgo_alerts.py  collect_graphion_benchmarks.py  collect_rust_benchmarks.py  compare_asm_fallback.py  compare_dispatch_variants.py  generate_optimization_report.py  pgo_artifacts.py  pgo_corpus.py  pgo_thresholds.py  refresh_cross_compiler_report.py  refresh_optimization_reports.py  refresh_performance_results.py  render_cross_compiler_report.py  render_optimization_reports.py  render_performance_results.py  run_bench.py  run_linux_bench_100x.py  run_linux_bench_10x.py  run_linux_vmdispatch_100x.py  run_pgo_pipeline.py
scripts/dev/: bootstrap.ps1  bootstrap.sh  dev_build.ps1  dev_build.sh
scripts/quality/: check_repo_health.py  quality_gate.ps1  quality_gate.sh  run_clang_tidy.py  test_dispatch_variants.py
scripts/repo/: audit_actions_pinning.py
src/: main.c
src/compiler/: ir.c  ir.h
src/graph/: csr_graph.c  csr_graph.h  hypergraph.c  hypergraph.h
src/parser/: bytecode.c  bytecode.h  frontend.c  frontend.h
src/runtime/: arena.c  arena.h
src/vm/: hotpaths.s  vm.c  vm.h
tests/: test_arena.c  test_graph.c  test_hypergraph.c  test_main.c  test_parser.c  test_vm.c
